--- a/src/app/controller/controller.component.html
+++ b/src/app/controller/controller.component.html
@@ -1,12 +1,12 @@
 <div class="background">
 
-  <p>
-    Cycle:
-    <input class="inputFeild" [(ngModel)] ="pulseTime" type="number">
-    minutes
-  </p>
+  <!--<p>-->
+    <!--Cycle:-->
+    <!--<input class="inputFeild" [(ngModel)] ="pulseTime" type="number">-->
+    <!--minutes-->
+  <!--</p>-->
   <button class='alert' (click)="start()">Start</button>
-  <button class='alert' (click)="reset()">Reset</button>
+  <!--<button class='alert' (click)="reset()">Reset</button>-->
 
   <div class="simulation">
 
