--- a/src/app/traffic-light/traffic-light.component.html
+++ b/src/app/traffic-light/traffic-light.component.html
@@ -1,6 +1,6 @@
 <div class="background">
 
-  <div [ngClass]="{ 'light': true,'red':red }"></div>
-  <div [ngClass]="{'light': true, 'secound': true,'yellow': yellow }"></div>
-  <div [ngClass]="{'light': true, 'third': true, 'green': green }"></div>
+  <div [ngClass]="{'red-light': true,'on':red }"></div>
+  <div [ngClass]="{'yellow-light': true,'on': yellow }"></div>
+  <div [ngClass]="{'green-light': true, 'on': green }"></div>
 </div>
